themes/2020/assets/css/base.css
/*=================================================================
  External Dependencies
 *================================================================*/

@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,400&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,400&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,400;0,700;1,400;1,900&family=Source+Sans+Pro:ital,wght@0,200;0,400;0,700;1,400;1,900&display=swap");

/*=================================================================
  Standard Elements
 *================================================================*/

:root {
    color-scheme: dark;

    --body-fill-rgb: 14, 51, 69;
    --body-contrast-rgb: 18, 55, 73;
    --panel-fill-rgb: 23, 61, 80;
    --body-fill: /* #0E3345 */ rgb(var(--body-fill-rgb));
    --body-contrast: #123749;
    --body-text: #C0C8CF;
    --body-focus: #41A0A0;

    --panel-fill: #173D50;
    --panel-contrast: #2A4959;

    --shadow: rgba(0, 0, 0, 0.1);
    --highlight: rgba(255, 255, 255, 0.1);

    --control-text: #000000;
    --control-fill: #3E8989;
    --control-contrast: #57CBCC;

    --active-text: #F6FFFF;

    --internal-size: 4px;
    --join-size: 8px;
    --pair-size: 12px;
    --group-size: 20px;
    --break-size: 40px;
}

body {
    /*font: 100 1em "Source Sans Pro", sans-serif;*/
    font: 400 1em/1.4 "Montserrat", sans-serif;

    -webkit-font-smoothing: antialiased;
    color: var(--body-text);
    background: var(--body-fill);
}

h1, h2, h3, h4, h5, h6 {
    position: relative;
    font: 1em "Poppins", sans-serif;

    color: var(--active-text);
    text-shadow: 2px 2px var(--body-fill);
}

h1:target, h2:target, h3:target, h4:target, h5:target, h6:target {
    font-weight: bold;
}

h1:target::before, h2:target::before, h3:target::before, h4:target::before, h5:target::before, h6:target::before {
    content: "";
    position: absolute;
    display: flex;
    align-items: center;
    height: 100%;
    margin-left: -1.5em;
    font-family: "Font Awesome 6 Pro", monospace;
    color: var(--active-text);
}

h1 {
    margin-bottom: 0.5em;
    font-size: 1.2em;
    font-variant: all-small-caps;

    color: var(--body-focus);
}

h1 a {
    text-decoration: underline;
    color: inherit;
}

h1:focus a, h1:hover a {
    color: var(--active-text);
}

h2 {
    margin-bottom: 1em;
    font-size: 2.4em;
    text-align: center;
}

h3 {
    font-size: 1.5em;
    text-align: center;
}

h2 + h3 {
    margin-top: -1.5em;
    margin-bottom: 1.5em;
}

h4 {
    font-size: 1em;
}

h5 {
    font: 200 80%/1.2 "Poppins", sans-serif;

    color: inherit;
}

a, a:focus, a:hover {
    color: var(--body-focus);
}

a {
    text-decoration: none;
    color: var(--active-text);
}

hr {
    clear: both;
    flex-basis: 100%;
    height: 1px;
    margin: 1em auto;
    opacity: 1;
    border: none;
    background: var(--highlight);
}

label {
    margin: 0 1ex;
    vertical-align: middle;

    font: 300 1em "Poppins", sans-serif;

    color: var(--body-text);
}

label:focus-within {
    color: var(--active-text);
}

form label:before {
    content: "";
    display: inline-block;
    width: 1.5em;
    text-align: end;
}

form label {
    display: block;
    width: auto;
    font-size: smaller;
    text-align: start;
}

form input, form textarea, form select, form button {
    overflow: hidden;
    margin: 0.2em 0;
    font-size: larger;
    background: rgba(var(--body-fill-rgb), 0.9);
}

input, textarea, select, button, a.btn {
    width: 100%;
    padding: 0.5em 1em;
    letter-spacing: 1px;

    color: var(--active-text);
    border: 1px solid rgba(236, 239, 241, 0.07);
    border-radius: var(--internal-size);
    background: transparent;
    box-shadow: 0 0 8px var(--shadow);
}

input::placeholder, textarea::placeholder {
    color: var(--body-text);
}

input:hover, textarea:hover, select:hover {
    border-color: var(--control-contrast);
    background: rgba(var(--panel-fill-rgb), 0.9);
}

textarea {
    height: 6em;
}

select * {
    background: var(--body-contrast);
}

button, a.btn {
    display: inline-block;
    width: auto;

    font-size: 1em;
    color: var(--control-text);

    border: 2px solid transparent;
    border-radius: var(--group-size);
    background: var(--control-fill);
}

button, a.btn, button *, a.btn * {
    cursor: pointer;
}

button:hover, a.btn:hover {
    color: var(--active-text);
    background: var(--body-focus);
}

section:target .cta {
    border-color: var(--control-contrast) !important;
}

form button {
    width: 100%;
    border-radius: var(--internal-size);
    background: var(--control-contrast);
}

form button:hover {
    background: var(--body-focus);
}

input, textarea, select, button, a, label, :target, :focus, :hover, :active {
    outline: none;
    transition: all .38s ease-in 0s;
}

input[type=checkbox] {
    width: initial;
}

li input[type=checkbox] {
    margin-left: -1em;
}

blockquote {
    padding: 1em;
    color: var(--active-text);
    border-left: 1ex solid var(--panel-contrast);
    border-radius: var(--internal-size);
    background: var(--panel-fill);
}

*:last-child {
    margin-bottom: 0;
}

*:first-child {
    margin-top: 0;
}

.row {
    row-gap: 1em;
}

h1 blockquote, h2 blockquote, h3 blockquote {
    display: inline-block;
    padding: 0.2em 1em;
    border-color: initial;
    border-left-width: 0.2ex;
}

strong, b, em {
    color: var(--active-text);
    /*background: var(--highlight);*/
    /*border-radius: var(--internal-size);*/
    /*padding: 1px 2px;*/
    /*border-bottom: 1px dotted var(--body-focus);*/
}

table {
    min-width: 62%;
    margin: 1.5em auto;
    padding: 1ex;
    border-collapse: separate;
    color: var(--active-text);
    border: 1px solid var(--panel-contrast);
    border-radius: var(--join-size);
    background: var(--panel-fill);
}

table th, table td {
    padding: 0.5em 1ex;
}

table tbody tr:nth-child(2n+1) {
    background: var(--panel-contrast);
}

section {
    position: relative;
    overflow: hidden;
    padding: 6em 0;
}

section.lit {
    background-color: var(--body-contrast);
}

@media (max-width: 768px) {
    section {
        padding: 4em 0;
    }
}

@media (max-width: 576px) {
    .box {
        padding: 1em;
    }
}

aside {
    position: relative;
    z-index: 1;
    display: flex;
    float: right;
    align-content: center;
    flex-direction: column;
    justify-content: center;
    padding: 1em;
    gap: 1em;
}

aside .btn {
    text-align: initial;
}

aside .btn i {
    width: 3em;
    height: 3em;
    vertical-align: middle;
}

iframe {
    display: block;
    width: 100%;
    margin: auto;
    border: 0 solid var(--panel-contrast);
    color-scheme: initial;
}

#content > iframe {
    height: 80vh;
    border-width: 1px 0;
}

/*=================================================================
  Behaviour
 *================================================================*/

[scroll-behavior=smooth] {
    scroll-behavior: smooth;
}


::-moz-selection, ::selection {
    color: var(--active-text);
    background: var(--control-contrast);
}

/*=================================================================
  Utilities
 *================================================================*/

html:not([data-os="Windows"]) .os-windows,
html:not([data-os="Mac OS"]) .os-macos,
html:not([data-os="Linux"]) .os-linux,
html:not([data-os="iOS"]) .os-ios,
html:not([data-os="Android"]) .os-android {
    display: none !important;
}

a.btn-transparent {
    color: var(--active-text);
    border: 1px solid var(--control-fill);
    background: transparent;
}

a.btn-transparent:hover,
a.btn-transparent:focus {
    border: 1px solid transparent;
    background: var(--control-fill);
}

.code {
    font-family: "Source Code Pro", monospace;
}

.info, .error {
    font-weight: 500;
    border-radius: var(--internal-size);
}

p.info, p.error {
    padding: 0.2em;
    text-align: center;
}

.info:empty, .error:empty {
    display: none;
}

.info, .safe {
    color: #198754;
}

p.info {
    background: #0C4128;
}

.error, .notice {
    color: #FFECB5;
}

.error, .severe {
    color: #BB2D3B;
}

p.error {
    background: #6A1A21;
}

.flex {
    display: flex;
    justify-content: center;
    margin: 1em auto;
    gap: 1em;
}

.aside {
    display: inline;
    border-left: 1px solid var(--panel-fill);
}

.box {
    position: relative;
    overflow: hidden;
    margin: 0 auto;
    padding: 2em;
    border-radius: var(--join-size);
    background: rgba(var(--panel-fill-rgb), 0.9);
    box-shadow: 0 0 var(--join-size) var(--shadow);
    transition: all .38s ease-in 0s;
}

.box::before {
    content: "";
    position: absolute;
    z-index: -1;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background: var(--bg) var(--panel-fill) no-repeat center/cover;
}

label.box:hover, label.box[checked] {
    background: rgba(var(--panel-fill-rgb), 0.6);
}

@media (max-width: 576px) {
    .box {
        padding: 1em;
    }
}

.box p.error, .box p.info {
    position: absolute;
    right: 0;
    bottom: 0;
    left: 0;
    margin: 0.5em;
    font-size: smaller;
    color: var(--active-text);
    background: var(--body-fill);
}

.box > hr {
    width: 38%;
}

.box > i {
    display: block;
    margin: 0 auto 0;
    font-size: 3em;
    color: var(--control-contrast);
}

.box > i.fa-xs {
    font-size: 0.75em;
    line-height: 1.2;
}

.box > h3, .box > h4 {
    text-align: center;
}

.box input {
    padding: 0.5em 1.5em;
    border: none;
    border-radius: var(--group-size);
    background: var(--highlight);
}

.box input.lit {
    background-color: var(--control-fill);
}

.box > input[type=checkbox] {
    display: block;
    margin: 1em auto;
    transform: scale(1.8);
}

.caption {
    font-size: smaller;
    color: var(--body-focus);
}

.caption a {
    text-decoration: underline;
    color: inherit;
}

.caption a:focus, .caption a:hover {
    color: var(--active-text);
}

/* Ensure empty fixed-width font-awesome icons still take their fixed size. */
.fa-fw::after {
    content: " ";
    white-space: pre;
}

.fa-xs {
    vertical-align: baseline;
}

/*=================================================================
  Navigation
 *================================================================*/

#navigation {
    margin-top: -80px;
    padding: var(--join-size);
}

#navigation .container {
    border: 1px solid var(--body-fill);
    border-radius: var(--join-size);
    background: rgba(var(--body-fill-rgb), 0.9);
    box-shadow: 0 0 2px var(--body-fill);
}

#navigation .navbar-nav {
    margin-right: auto;
}

#navigation .navbar-brand {
    font: 500 1em "Poppins", sans-serif;
}

#navigation .nav-item {
    border-bottom: 2px solid transparent;
    transition: all .38s ease-in 0s;
}

#navigation .nav-item:hover, #navigation .nav-item.active {
    border-bottom-color: var(--control-contrast);
}

#navigation .nav-link {
    color: var(--body-text);
}

#navigation .nav-item.active .nav-link {
    font-weight: bold;
    color: var(--active-text);
}

html #navigation .cta {
    opacity: 0;
    transition: all .38s ease-in 0s;
}

html[data-scroll]:not([data-scroll="hero"]) #navigation .cta {
    opacity: 1;
}

@supports ( (-webkit-backdrop-filter: blur(1px)) or (backdrop-filter: blur(1px)) ) {
    #navigation .container {
        background: rgba(var(--body-fill-rgb), 0.1);
        -webkit-backdrop-filter: blur(15px);
        backdrop-filter: blur(15px);
    }
}

/*=================================================================
  Footer
 *================================================================*/

#footer {
    position: relative;
    overflow: hidden;
    padding-top: 4em;
    background: #083E55;
}

#footer a {
    color: var(--body-text);
}

#footer a:hover {
    color: var(--active-text);
}

.copyright p {
    margin: 1em;
}

